main.tf
data "aws_eks_cluster" "cluster" {
    name = module.eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
    name = module.eks.cluster_id
}

data "aws_availability_zones" "available" {
}

resource "aws_security_group" "worker_group_mgmt_one" {
    name_prefix = "worker_group_mgmt_one"
    vpc_id = module.vpc.vpc_id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"

        cidr_blocks = [
            "10.0.0.0/8",
        ]
    }
}

resource "aws_security_group" "all_worker_mgmt" {
    name_prefix = "all_worker_management"
    vpc_id = module.vpc.vpc_id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"

        cidr_blocks = [
            "10.0.0.0/8",
            "172.16.0.0/12",
            "192.168.0.0/16",
        ]
    }
}


module "vpc" {
    source = "terraform-aws-modules/vpc/aws"
    version = "2.6.0"

    name = "test-vpc"
    cidr = "10.0.0.0/16"
    azs = data.aws_availability_zones.available.names
    private_subnets = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
    public_subnets = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
    enable_nat_gateway = true # Allows eks autoscaler group.
    single_nat_gateway = true # Allows eks autoscaler group.
    enable_dns_hostnames = true # Allows eks autoscaler group.

    public_subnet_tags = {
        "kubernetes.io/cluster/${var.cluster_name}" = "shared"
        "kubernetes.io/role/elb" = 1
    }

    private_subnet_tags = {
        "kubernetes.io/cluster/${var.cluster_name}" = "shared"
        "kubernetes.io/role/internal-elb" = 1
    }
}

module "eks" {
    source = "terraform-aws-modules/eks/aws"
    version = "12.2.0"
    cluster_name = var.cluster_name
    cluster_version = "1.17"
    subnets = module.vpc.private_subnets # Autoscaling node gropus will be running in the private subnet.
    cluster_create_timeout = "1h"
    cluster_endpoint_private_access = true # Allows private endpoints to connect to k8s and join the cluster.
    vpc_id = module.vpc.vpc_id # This tells the module which vpc to join.

    worker_groups = [ # Autosclaer worker groups
        {
            name = "worker-group-1"
            instance_type = "t2.small"
            additional_userdata = "echo foo bar"
            asg_desired_capacity = 1
            additional_security_group_ids = [aws_security_group.worker_group_mgmt_one.id]
        },
    ]

    worker_additional_security_group_ids = [aws_security_group.all_worker_mgmt.id] # Any additional security group ids
    map_roles = var.map_roles
    map_users = var.map_users
    map_accounts = var.map_accounts
}

provider "kubernetes" {
    host                   = data.aws_eks_cluster.cluster.endpoint
    cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
    token                  = data.aws_eks_cluster_auth.cluster.token
    load_config_file       = false
    version                = "~> 1.11"
}

resource "kubernetes_deployment" "example" {
    metadata {
        name = "terraform-example"
        labels = {
            test = "MyExampleApp"
        }
    }

    spec {
        replicas = 2

        selector {
            match_labels = {
                test = "MyExampleApp"
            }
        }

        template {
            metadata {
                labels = {
                    test = "MyExampleApp"
                }
            }

            spec {
                container {
                    image = "nginx:1.7.8"
                    name  = "example"

                    resources {
                        limits {
                            cpu    = "0.5"
                            memory = "512Mi"
                        }
                        requests {
                            cpu    = "250m"
                            memory = "50Mi"
                        }
                    }
                }
            }
        }
    }
}

resource "kubernetes_service" "example" {
    metadata {
        name = "terraform-example"
    }
    spec {
        selector = {
            test = "MyExampleApp"
        }
        port {
            port        = 80
            target_port = 80
        }

        type = "LoadBalancer"
    }
}



resource "aws_s3_bucket" "test_bucket" {
  bucket = "mlops-platform-training-data"
  acl    = "private"
  versioning {
    enabled = true
  }
}



resource "aws_iam_role" "iam_for_lambda" {
  name = "iam_for_lambda"

  assume_role_policy = <<-POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "lambda.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
POLICY
}

module "lambda_function" {
  source = "terraform-aws-modules/lambda/aws"

  function_name = "my-lambda1"
  description   = "My awesome lambda function"
  handler       = "index.lambda_handler"
  runtime       = "python3.8"

  source_path = "./lambda_test.py"

  tags = {
    Name = "my-lambda1"
  }
}
